--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--All Expenses-->
         <scene sceneID="uX2-58-EhG">
             <objects>
-                <tableViewController id="c3E-y4-ULk" sceneMemberID="viewController">
+                <tableViewController id="c3E-y4-ULk" customClass="AllExpensesTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sTV-hZ-UKe">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -25,7 +25,7 @@
                             <outlet property="delegate" destination="c3E-y4-ULk" id="8aK-yj-0Nr"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="ihl-OM-MD1"/>
+                    <navigationItem key="navigationItem" title="All Expenses" id="ihl-OM-MD1"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GQh-BI-Fho" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -237,7 +237,7 @@
             </objects>
             <point key="canvasLocation" x="147" y="-383"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Settings-->
         <scene sceneID="nIb-Z6-984">
             <objects>
                 <tableViewController id="Dv6-6c-FEv" sceneMemberID="viewController">
@@ -262,7 +262,7 @@
                             <outlet property="delegate" destination="Dv6-6c-FEv" id="1zh-bd-fWa"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="6oE-Pz-2cz"/>
+                    <navigationItem key="navigationItem" title="Settings" id="6oE-Pz-2cz"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q4Y-gS-7h3" userLabel="First Responder" sceneMemberID="firstResponder"/>
